sailfish-tests/integration-tests/tests/fails/templates/unclosed_delimiter.stpl
<html>
  <body>
    <%= self.content
  </body>
</html>
